[package]
name = "rust-windll-template"
version = "0.1.0"
edition = "2021"
authors = ["Dmitry (DiMM) Kuznetsov"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["consoleapi", "minwindef"] }

[lib]
name = "mydll"
path = "src/lib.rs"
crate-type = ["dylib"]

[profile.release]
# LLVM's link time optimizations
lto = true